RESOLVED FIXED297077
Web Content Crashes when navigating to certain URLs with uBlock origin enabled
https://bugs.webkit.org/show_bug.cgi?id=297077
Summary Web Content Crashes when navigating to certain URLs with uBlock origin enabled
Kiara Rose
Reported 2025-08-07 13:43:14 PDT
Attachments
Kiara Rose
Comment 1 2025-08-07 14:15:58 PDT
EWS
Comment 2 2025-08-08 09:39:25 PDT
Committed 298398@main (1001b516c3b3): <https://commits.webkit.org/298398@main> Reviewed commits have been landed. Closing PR #49082 and removing active labels.
Alexey Proskuryakov
Comment 3 2025-09-24 12:58:02 PDT
*** Bug 296016 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.