Source/WebCore/loader/PolicyChecker.cpp
@@ -304,7 +304,10 @@ void PolicyChecker::checkNavigationPolicy(ResourceRequest&& request, const Resou
         if (RefPtr page = frame->page()) {
             auto resourceType = frame->isMainFrame() ? ContentExtensions::ResourceType::TopDocument : ContentExtensions::ResourceType::ChildDocument;
             auto results = page->protectedUserContentProvider()->processContentRuleListsForLoad(*page, request.url(), resourceType, *frame->loader().documentLoader());
-            ContentExtensions::applyResultsToRequest(WTFMove(results), page.get(), request);
+
+            // Only apply the results if a redirct will occur. See https://webkit.org/b/297077.
+            if (results.summary.redirected)
+                ContentExtensions::applyResultsToRequest(WTFMove(results), page.get(), request);
         }
     }
 #endif
